Project

General

Profile

Actions

Bug #41875

closed

Segmentation fault in rados ls when using --pgid and --pool/-p together as options

Added by Vikhyat Umrao over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic luminous nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

- Works fine with only --pgid

[root@3cfea3e7c7e2 build]# bin/rados ls --pgid=3.7
obj1

- Segfault when combining --pgid with --pool/-p option

[root@3cfea3e7c7e2 build]# bin/rados -p testpool ls --pgid=3.7
*** Caught signal (Segmentation fault) **
 in thread 7f057677ba40 thread_name:rados
 ceph version v15.0.0-5019-gd63570c5a5 (d63570c5a5a76e9883fb7b578dece4fc32408a88) octopus (dev)
 1: (()+0x12e80) [0x7f0576e00e80]
 2: (()+0xaa52e) [0x7f057ff7552e]
 3: (()+0xaaa59) [0x7f057ff75a59]
 4: (main()+0x1bee) [0x55b3a2191ebe]
 5: (__libc_start_main()+0xf3) [0x7f0576850f33]
 6: (_start()+0x2e) [0x55b3a21a50be]
2019-09-14T14:43:48.090+0000 7f057677ba40 -1 *** Caught signal (Segmentation fault) **
 in thread 7f057677ba40 thread_name:rados

Related issues 3 (0 open3 closed)

Copied to RADOS - Backport #41962: luminous: Segmentation fault in rados ls when using --pgid and --pool/-p together as optionsResolvedVikhyat UmraoActions
Copied to RADOS - Backport #41963: nautilus: Segmentation fault in rados ls when using --pgid and --pool/-p together as optionsResolvedVikhyat UmraoActions
Copied to RADOS - Backport #41964: mimic: Segmentation fault in rados ls when using --pgid and --pool/-p together as optionsResolvedNathan CutlerActions
Actions #1

Updated by Vikhyat Umrao over 4 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 30413
Actions #2

Updated by Vikhyat Umrao over 4 years ago

  • Backport set to mimic luminous nautilus
Actions #3

Updated by Kefu Chai over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41962: luminous: Segmentation fault in rados ls when using --pgid and --pool/-p together as options added
Actions #5

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41963: nautilus: Segmentation fault in rados ls when using --pgid and --pool/-p together as options added
Actions #6

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41964: mimic: Segmentation fault in rados ls when using --pgid and --pool/-p together as options added
Actions #7

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF